# iframe

./: .env  .env_sample  .gitignore  API_KEYS.md  Cargo.toml  Lendasat Postman Collection.postman_collection.json  README.md  docker-compose.yml  dprint.json  example-configuration.nix  flake.nix  justfile  package-lock.json  package.json  pnpm-lock.yaml
borrower-wallet/: Cargo.toml
borrower-wallet/src/: browser_wallet.rs  lib.rs  storage.rs  wallet.rs
browser-wallet/: Cargo.toml  Dockerfile  build.rs
browser-wallet/src/: auth.rs  browser_wallet.rs  lib.rs  models.rs  storage.rs  wallet.rs
browser-wallet/src/wallet/: fiat_loan_details.rs
client-sdk/: Cargo.toml  README.md
client-sdk/examples/: authentication.rs
client-sdk/src/: auth.rs  lib.rs  wallet.rs
client-sdk/src/wallet/: fiat_loan_details.rs
hub/: Cargo.toml  build.rs
hub/migrations/: 20240816042737_initial_migration.down.sql  20240816042737_initial_migration.up.sql  20240819043335_loans.down.sql  20240819043335_loans.up.sql  20240819102612_contracts.down.sql  20240819102612_contracts.up.sql  20240820022131_differentiate-between-borrowers-and-lenders.down.sql  20240820022131_differentiate-between-borrowers-and-lenders.up.sql  20240820041612_add-lenders.down.sql  20240820041612_add-lenders.up.sql  20241010025853_loan_requests.up.sql  20241015030120_add_lender_xpub_to_contracts.down.sql  20241015030120_add_lender_xpub_to_contracts.up.sql  20241018035526_add_polygon_asset_chain.down.sql  20241018035526_add_polygon_asset_chain.up.sql  20241022042344_change-transaction-table-id.down.sql  20241022042344_change-transaction-table-id.up.sql  20241022154213_add_invite_code_lender.down.sql  20241022154213_add_invite_code_lender.up.sql  20241029063433_user-feature-flags.down.sql  20241029063433_user-feature-flags.up.sql  20241030075339_add_integration_to_contract.down.sql  20241030075339_add_integration_to_contract.up.sql  20241031064628_add_moon_tables.down.sql  20241031064628_add_moon_tables.up.sql  20241116231554_browser-wallet-backup.down.sql  20241116231554_browser-wallet-backup.up.sql  20241120113032_contract-repayment-provided-status.down.sql  20241120113032_contract-repayment-provided-status.up.sql  20241123065147_track-user-loggin.down.sql  20241123065147_track-user-loggin.up.sql  20241124015212_moon_invoice_id_uuid.down.sql  20241124015212_moon_invoice_id_uuid.up.sql  20241125225807_store_hub_wallet_key_index.down.sql  20241125225807_store_hub_wallet_key_index.up.sql  20241126015233_store_hub_wallet_key_index.down.sql  20241126015233_store_hub_wallet_key_index.up.sql  20241126023310_change_moon_cards_date_to_string.down.sql  20241126023310_change_moon_cards_date_to_string.up.sql  20241127003754_cancel-contract-request.down.sql  (+167 more)
hub/src/: api_keys.rs  approve_contract.rs  bitmex_index_price_rest.rs  bitmex_index_pricefeed.rs  bitmex_ws_client.rs  blockchain.rs  bringin.rs  config.rs  contract_approval_expired.rs  contract_close_to_expiry.rs  contract_default.rs  contract_extension.rs  contract_liquidation.rs  contract_request_expiry.rs  contract_requests.rs  contract_update_collateral.rs  cron_scheduler.rs  daily_digest.rs  db.rs  discounted_origination_fee.rs  electrum.rs  email.rs  esplora_client.rs  etherscan.rs  expiry.rs  geo_location.rs  installment_close_to_due_date.rs  late_installments.rs  lib.rs  liquidation_engine.rs  loan_application_expiry.rs  logger.rs  main.rs  mark_as_principal_given.rs  mempool.rs  model.rs  moon.rs  notifications.rs  process_defaulted_contracts.rs  routes.rs  (+8 more)
hub/src/blockchain/: btsieve.rs  esplora_client.rs
hub/src/db/: api_account_creator.rs  api_keys.rs  bitcoin_repayment.rs  borrower_features.rs  borrowers.rs  borrowers_pubkey_auth.rs  borrowers_referral_code.rs  bringin.rs  contract_collateral_transactions.rs  contract_disputes.rs  contract_emails.rs  contract_extensions.rs  contract_status_log.rs  contracts.rs  dispute.rs  fiat_loan_details.rs  installments.rs  invite_code.rs  jail.rs  kyc.rs  lender_features.rs  lenders.rs  loan_applications.rs  loan_deals.rs  loan_offers.rs  loan_requests.rs  loans.rs  manual_collateral_recovery.rs  migrate_pks.rs  moon.rs  notification_settings.rs  notifications.rs  sideshift.rs  telegram_bot.rs  transactions.rs  user.rs  user_logins.rs  user_stats.rs  waitlist.rs  wallet_backups.rs  (+1 more)
hub/src/db/contracts/: update_collateral.rs
hub/src/db/notifications/: borrower.rs  lender.rs
hub/src/model/: bitcoin_repayment.rs  contract.rs  installment.rs  notifications.rs  npub.rs
hub/src/model/snapshots/: hub__model__installment__tests__extend_installments_bullet.snap  hub__model__installment__tests__extend_installments_interest_only_monthly.snap  hub__model__installment__tests__generate_installments_bullet.snap  (+8 more)
hub/src/notifications/: email.rs  websocket.rs
hub/src/routes/: auth.rs  borrower.rs  borrower_profiles.rs  contracts.rs  lender.rs  lender_profiles.rs  loan_offers.rs  loans.rs  price_feed_ws.rs  profiles.rs  route_middleware.rs  user_connection_details_middleware.rs
hub/src/snapshots/: hub__mempool__tests__collateral_outputs.snap
mempool-mock/: Cargo.toml
mempool-mock/src/: lib.rs  logger.rs
pay-with-moon/: Cargo.toml
pay-with-moon/src/: lib.rs
pay-with-moon/tests/json_files/: moon_message.json  moon_message2.json  moon_message4.json  moon_message6_example_card_authorization_refund.json  moon_message6_example_card_transaction.json  moon_message6_example_decline_transaction.json  moon_message6_example_moon_credit_event.json
telegram-bot/: Cargo.toml
telegram-bot/examples/: run_bot.rs
telegram-bot/src/: lib.rs
tests-e2e/: Cargo.toml
tests-e2e/examples/: test-data.rs
tests-e2e/src/: lib.rs
tests-e2e/tests/: api_account_borrower.rs  api_account_byok.rs  bitcoin_repayment.rs  borrower_loan_applications.rs  collateral_recovery.rs  common.rs  open_and_repay_loan.rs  pubkey_auth.rs
the-boss/: Cargo.toml
the-boss/migrations/: 20240816042737_initial_migration.down.sql
the-boss/src/: config.rs  db.rs  email.rs  main.rs  model.rs  routes.rs
the-boss/src/routes/: auth.rs  frontend.rs  health_check.rs
(+1787 files in other folders)
