[workspace]
members = [
  "browser-wallet",
  "descriptor-wallet",
  "hub",
  "mempool-mock",
  "pay-with-moon",
  "sideshift",
  "telegram-bot",
  "tests-e2e",
]
resolver = "2"

[profile.release]
opt-level = "s"

[patch.crates-io]
xtra = { git = "https://github.com/Restioson/xtra/", rev = "3714ce8" }
