[package]
name = "borrower-wallet"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
aes-gcm-siv = { version = "0.11", features = ["std"] }
anyhow = "1"
bip32 = "0.5"
# hkd32 = "0.7"
bip39 = { version = "2", features = ["rand_core"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
hex = "0.4"
hkdf = { version = "0.12", features = ["std"] }
rand = "0.8"
scrypt = "0.11"
sha2 = "0.10"
# TODO: Might not need all these features.
web-sys = { version = "0.3", features = ["Window", "Storage", "Cache", "CacheStorage", "StorageEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
