[package]
name = "borrower-wallet"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
aes-gcm-siv = { version = "0.11", features = ["std"] }
anyhow = "1"
bip39 = { version = "2", features = ["rand_core"] }
bitcoin = "0.32.2"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
hex = "0.4"
hkdf = { version = "0.12", features = ["std"] }
rand = "0.8"
scrypt = "0.11"
sha2 = "0.10"
wasm-bindgen = "0.2"
# TODO: Might not need all these features.
web-sys = { version = "0.3", features = ["Window", "Storage", "Cache", "CacheStorage", "StorageEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
