[package]
name = "browser-wallet"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm-siv = { version = "0.11", features = ["std"] }
anyhow = "1"
argon2 = "0.6.0-pre.1"
bip39 = { version = "2", features = ["rand_core"] }
bitcoin = "0.32.2"
console_log = { version = "1", features = ["color"] }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
hex = "0.4"
hkdf = { version = "0.12", features = ["std"] }
lendasat-core = { path = "../lendasat-core" }
log = "0.4"
miniscript = "12"
rand = "0.8"
sha2 = "0.10"
srp = "0.6.0"
wasm-bindgen = "0.2.93"
# TODO: Might not need all these features.
web-sys = { version = "0.3", features = ["Window", "Storage", "Cache", "CacheStorage", "StorageEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
