[package]
name = "browser-wallet"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
bip39 = { version = "2.1.0", features = ["rand_core"] }
bitcoin = { version = "0.32.2", features = ["secp-recovery"] }
client-sdk = { path = "../client-sdk" }
console_log = { version = "1", features = ["color"] }
getrandom = { version = "0.2", features = ["wasm-bindgen", "js"] }
hex = "0.4"
log = "0.4"
miniscript = "12"
nostr = { version = "0.40.0", default-features = false, features = ["std"] }
rand = "0.8"
sha2 = "0.10"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
