[package]
name = "client-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = { version = "0.11", features = ["std"] }
anyhow = "1"
bip39 = { version = "2.1.0", features = ["rand_core"] }
bitcoin = { version = "0.32.2", features = ["secp-recovery"] }
ecies = { version = "0.2.6", default-features = false, features = ["pure"] }
hex = "0.4"
hkdf = { version = "0.12", features = ["std"] }
log = "0.4"
miniscript = "12"
once_cell = { version = "1.19.0", features = ["critical-section"] }
rand = "0.8"
sha2 = "0.10"
srp = "0.6.0"
