[package]
name = "hub"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5.0"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.0", features = ["cookie"] }
bdk_file_store = "0.14.0"
bdk_wallet = { version = "1.0.0-beta.1" }
bitcoin = { version = "0.32.2", features = ["bitcoinconsensus"] }
bitcoin-units = "0.1.2"
handlebars = "4.3.7"
include_dir = "0.7.4"
jsonwebtoken = "9.2.0"
lettre = { version = "0.11.2", features = ["tokio1", "tokio1-native-tls"] }
mime = "0.3.17"
mime_guess = "2.0.5"
rand = "0.8.5"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-async-std", "tls-rustls", "postgres", "uuid", "time", "rust_decimal"] }
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["full", "tracing"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
