[package]
name = "hub"
version = "0.3.12"
build = "build.rs"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5.0"
async-stream = "0.3"
async-trait = "0.1.81"
atty = "0.2.14"
axum = { version = "0.7.9", features = ["ws", "tokio", "macros"] }
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
backon = { version = "1", features = ["tokio-sleep"] }
bitcoin = { version = "0.32.2", features = ["bitcoinconsensus", "serde"] }
bitcoin-units = "0.1.2"
bitmex-stream = { git = "https://github.com/get10101/bitmex-stream", rev = "c68668b" }
descriptor-wallet = { path = "../descriptor-wallet" }
futures = "0.3"
handlebars = "4.3.7"
include_dir = "0.7.4"
jsonwebtoken = "9.2.0"
lettre = { version = "0.11.2", features = ["tokio1", "tokio1-native-tls"] }
mime = "0.3.17"
mime_guess = "2.0.5"
miniscript = { version = "12", features = ["serde"] }
native-tls = "0.2"
pay-with-moon = { path = "../pay-with-moon" }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
rust_decimal = { version = "1.35", features = ["serde-with-float"] }
rust_decimal_macros = "1.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-async-std", "tls-rustls", "postgres", "uuid", "time", "rust_decimal"] }
temp-dir = "0.1.13"
time = { version = "0.3", features = ["macros", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-cron-scheduler = "0.13.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
xtra = { version = "0.6.0", features = ["tokio"] }

[dev-dependencies]
insta = "1"
