[package]
name = "pay-with-moon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
rust_decimal = { version = "1.35", features = ["serde-with-float", "serde-with-str"] }
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_with = "3.11.0"
time = { version = "0.3", features = ["macros", "serde", "serde-well-known", "parsing"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.37"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
