[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
