[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", default-features = false, features = ["macros", "native-tls"] }
tokio = { version = "1", default-features = false }
tracing = "0.1.37"
url = "2.5.2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
