[package]
name = "tests-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
borrower-wallet = { path = "../borrower-wallet" }
hub = { path = "../hub" }
reqwest = { version = "0.12.7", features = ["cookies", "json"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "tracing"] }
