[package]
name = "the-boss"
version = "0.1.0"
build = "build.rs"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7.5" }
bdk_file_store = "0.14.0"
bdk_wallet = { version = "1.0.0-beta.1" }
bitcoin = { version = "0.32.2", features = ["bitcoinconsensus"] }
bitcoin-units = "0.1.2"
include_dir = "0.7.4"
mime = "0.3.17"
mime_guess = "2.0.5"
sqlx = { version = "0.8", features = ["runtime-async-std", "tls-rustls", "postgres", "uuid"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
